--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     container_name: flask-student-api
     restart: always
-    image: ${USERNAME}/flask-student-api:v1.0
+    image: ${DOCKERHUB_USERNAME}/flask-student-api:v1.0
     build:
       context: ./backend
       dockerfile: flask.dockerfile
