--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -11,7 +11,7 @@ on:
 jobs:
     backend-deploy:
         name: Build and deploy backend microservice
-        runs-on: [self-hosted]
+        runs-on: ubuntu-latest
 
         steps:
             - name: Checkout code 
