--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -18,7 +18,15 @@ jobs:
               with:
                 fetch-depth: 0
 
-            - name: test
-              run: echo "This is working for me"
+            - name: Build Docker image
+              run: |
+                docker build --file ./backend/flask.dockerfile -t horlar/flask-student-api:v1.0 .
+
+            - name: Docker Login (use secrets)
+              run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Docker Push
+              run: |
+                docker push horlar/flask-student-api:v1.0
 
 
