--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,6 +16,11 @@ jobs:
             - name: Checkout code 
               uses: actions/checkout@v4
 
+            - name: list directory
+              run: |
+               ls -ltr
+               ls ./backend
+
             - name: Build Docker image
               run: |
                 docker build --file ./backend/flask.dockerfile -t horlar/flask-student-api:v1.0 .
