--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,12 +16,10 @@ jobs:
             - name: Checkout code 
               uses: actions/checkout@v4
 
-            - name: change directory
-              run: cd backend
 
             - name: Build Docker image
               run: |
-                docker build --file ./flask.dockerfile -t horlar/flask-student-api:v1.0 .
+                docker build --file ./backend/flask.dockerfile -t horlar/flask-student-api:v1.0 .
 
             - name: Docker Login (use secrets)
               run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${ secrets.DOCKERHUB_TOKEN }}
