--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,7 +19,7 @@ jobs:
 
             - name: Build Docker image
               run: |
-                docker build --file ./flask.dockerfile -t horlar/flask-student-api:v1.0 .
+                docker build --file backend/flask.dockerfile -t horlar/flask-student-api:v1.0 .
 
             - name: Docker Login (use secrets)
               run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${ secrets.DOCKERHUB_TOKEN }}
