--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,10 +22,10 @@ jobs:
                 docker build --file backend/flask.dockerfile -t horlar/flask-student-api:v1.0 backend
 
             - name: Docker Login (use secrets)
-              run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${ secrets.DOCKERHUB_TOKEN }}
+              run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Docker Push
               run: |
-                docker push horlar/flask-student-api:v1.0
+                docker push ${{ secrets.DOCKERHUB_USERNAME }}/flask-student-api:v1.0
 
 
