--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -5,7 +5,8 @@ on:
     push:
         branches:
             - master
-        
+        paths:
+            - 'backend'
 
 jobs:
     backend-deploy:
