--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -6,7 +6,7 @@ on:
         branches:
             - master
         paths:
-            - 'backend'
+            - 'backend/*'
 
 jobs:
     backend-deploy:
