--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -35,7 +35,7 @@ jobs:
 
     notify-success:
         name: Notification via Email
-        runs-on: ubuntu-lastest
+        runs-on: ubuntu-latest
 
         steps:
             - name: Send successfull email notification
