--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,9 +34,10 @@ jobs:
                 docker push ${{ secrets.DOCKERHUB_USERNAME }}/flask-student-api:v1.0
 
     notify-success:
-        name: Notification via Email
+        name: Sucess Notification via Email
         runs-on: ubuntu-latest
-
+        needs: build-and-deploy
+        if: success() # only run if build-and-deploy job is successful
         steps:
             - name: Send successfull email notification
               uses: dawidd6/action-send-mail@v6
@@ -51,6 +52,34 @@ jobs:
                 body: |
                    Dear team,
                    The Flask backend Docker Image has been built and deployed
+                   successfully.
+
+                   Repository Info:
+                     - Repository: ${{ github.repository }}
+                     - Branch: ${{ github.ref }}
+                     - Commit: ${{ github.sha }}
+
+                   Thank you!
+
+    notify-fail:
+        name: Fail Notification via Email
+        runs-on: ubuntu-latest
+        needs: build-and-deploy
+        if: failure() # only run if build-and-deploy job is failed
+        steps:
+            - name: Send failed email notification
+              uses: dawidd6/action-send-mail@v6
+              with:
+                server_address: smtp.gmail.com
+                server_port: 465
+                username: ${{ secrets.MAIL_USERNAME}}
+                password: ${{ secrets.MAIL_PASSWORD }}
+                subject: Flask Docker Deployment Successfull
+                to: ${{ secrets.RECEIVER_EMAIL_ADDERESS }}
+                from: ${{ secrets.SENDER_EMAIL_ADDERESS }}
+                body: |
+                   Dear team,
+                   The Flask backend Docker Image was not build
                    successfully.
 
                    Repository Info:
