add a notification job

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,7 +2,8 @@
 name: Build and Deploy Flask API to DockerHub
 
 on:
-    [workflow_dispatch]
+    workflow_dispatch:
+        
     push:
         branches:
             - master
