--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,7 @@ services:
     env_file: ".env"
     environment:
       - DATABASE_URL=mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@database:3306/${MYSQL_DATABASE}
+      - PROMETHEUS_MULTIPROC_DIR=/tmp
     depends_on:
       - database
 
@@ -34,7 +35,23 @@ services:
   
 
   # frontend service
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:main
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - backend
 
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:main-ubuntu
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
 
 
 volumes:
